--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -40,7 +40,7 @@
                 </div>
             </header>
             <main class="main">
-                <div class="main__dream-house">
+                <div class="main__dream-house dream-house">
                     <h1 class="dream-house__name">
                         Build Your Dream <span class="main__color-word">House</span>
                     </h1>
@@ -50,11 +50,11 @@
                         </p>
                         <button class="dream-house__btn" type="button">Free Consultation</button>
                     </div>
-                    <div class="dream-house__picture">
+                    <div class="dream-house__picture picture">
                         <img class="picture__img" src="img/dream_house.jpg" alt="dream house">
                     </div>
                 </div>
-                <div class="main__build-room">
+                <div class="main__build-room build-room">
                     <h3 class="build-room__name">Build professional valuable room for you</h3>
                     <div class="build-room__picture">
                         <img class="build-room__img" src="img/room-01.jpg" alt="room 1">
@@ -63,15 +63,15 @@
                         <img class="build-room__img" src="img/room-04.jpg" alt="room 4">
                     </div>
                 </div>
-                <div class="main__archmove">
+                <div class="main__archmove archmove">
                     <h3 class="archmove__name">Build your needs with Archmove</h3>
                     <div class="archmove__info">
                         <div class="archmove__picture">
                             <img src="img/people.jpg" alt="archmove">
                         </div>
-                        <div class="main__archmove-consultation">
-                            <ul class="consultation__list">
-                                <li class="list__info">
+                        <div class="main__archmove-consultation .list">
+                            <ul class="list">
+                                <li class="list__info info">
                                     <div class="info__img">
                                         <svg class="guaranteed">
                                             <use xlink:href="#guaranteed"></use>
@@ -82,7 +82,7 @@
                                         <p class="info__paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
                                     </div>
                                 </li>
-                                <li class="list__info">
+                                <li class="list__info info">
                                     <div class="info__img">
                                         <svg class="fees">
                                             <use xlink:href="#fees"></use>
@@ -93,7 +93,7 @@
                                         <p class="info__paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
                                     </div>
                                 </li>
-                                <li class="list__info">
+                                <li class="list__info info">
                                     <div class="info__img">
                                         <svg class="escort">
                                             <use xlink:href="#escort"></use>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__realize-dream">
+                <div class="main__realize-dream realize-dream">
                     <div class="realize-dream__img">
                         <img src="img/house_in_sky.png" alt="house in the sky">
                     </div>
@@ -122,7 +122,7 @@
                 </div>
             </main>
             <footer class="footer">
-                <div class="footer__menu">
+                <div class="footer__menu menu">
                     <a class="menu__link" href="#About Us">About Us</a>
                     <a class="menu__link" href="#How it Works">How it Works</a>
                     <a class="menu__link" href="#FAQ">FAQ</a>
