--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -69,7 +69,7 @@
                         <div class="archmove__picture">
                             <img src="img/people.jpg" alt="archmove">
                         </div>
-                        <div class="main__archmove-consultation .list">
+                        <div class="main__archmove-consultation list">
                             <ul class="list">
                                 <li class="list__info info">
                                     <div class="info__img">
@@ -105,7 +105,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <button class="free-consultation__btn" type="button">FREE CONSULTATION</button>
+                            <button class="free-consultation-btn" type="button">FREE CONSULTATION</button>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h3 class="realize-dream__name">
                             Realize your dream project with <span class="main__color-word">Archmove</span>
                         </h3>
-                        <button class="free-consultation__btn free-consultation__btn--no-margin" type="button">FREE CONSULTATION</button>
+                        <button class="free-consultation-btn free-consultation-btn--no-margin" type="button">FREE CONSULTATION</button>
                     </div>
                 </div>
             </main>
