added fonts variables, changed button classes

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -11,24 +11,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     </head>
-    <body data-body>
+    <body>
         <header class="header__content">
             <div class="header__menu">
-                <svg class="logo header__logo" data-header-logo>
+                <svg class="logo header__logo">
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
                 <ul class="menu__list">
                     <li class="menu__lines">
-                        <a class="menu__links" data-link-gallery href="#">Design Gallery</a>
+                        <a class="menu__links" href="#">Design Gallery</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links" data-link-list href="#">List of Architect</a>
+                        <a class="menu__links" href="#">List of Architect</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links" data-link-articles href="#">Articles</a>
+                        <a class="menu__links" href="#">Articles</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links" data-link-works href="#">How it Works</a>
+                        <a class="menu__links" href="#">How it Works</a>
                     </li>
                 </ul>
             </div>
@@ -37,29 +37,29 @@
                     <svg width="15" height="20" class="halfmoon" data-halfmoon>
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
-                    <svg width="24" height="24" class="sun">
+                    <svg width="24" height="24">
                         <use xlink:href="sprite.svg#sun"></use>
                     </svg>
                 </div>
-                <button type="button" class="header__buttons__sign--in" data-header-button-in>Sign In</button>
-                <button type="button" data-header-button class="header__buttons__sign--up button">Sign Up</button>
+                <button type="button" class="button--secondary">Sign In</button>
+                <button type="button" class="button--primary">Sign Up</button>
             </div>
         </header>
         <div class="dreamhouse">
-            <h1 class="dreamhouse__title" data-dreamhouse-title>
+            <h1 class="dreamhouse__title">
                 Build Your<br>
                 Dream <span class="word--color">House</span>
             </h1>
             <div class="dreamhouse__container">
                 <div class="dreamhouse__aside">
-                    <div class="dreamhouse__aside__text" data-dreamhouse-text>
+                    <div class="dreamhouse__aside__text">
                         <p>The first and most trusted marketplace</p>
                         <p>of design & build house in the World.</p>
                         <p>100% guaranted Build safe,</p>
                         <p>comfortable and transparate with a</p>
                         <p>project management for the best result</p>
                     </div>
-                    <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button">Free Consultation</button>
+                    <button type="button" class="button--primary">Free Consultation</button>
                 </div>
                 <div class="dreamhouse__photo">
                     <picture>
@@ -71,7 +71,7 @@
         </div>
         <div class="design">
             <div class="design__title">
-                <h2 class="design__title--text" data-design-title>Build professional
+                <h2 class="design__title--text">Build professional
                     <br>valuable room for you
                 </h2>
             </div>
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="archmove">
-            <h2 class="archmove__title" data-archmove-title>Build your needs
+            <h2 class="archmove__title">Build your needs
                 <br>with Archmove
             </h2>
             <div class="archmove__container">
@@ -107,10 +107,10 @@
                 </div>
                 <div class="archmove__content">
                     <div class="archmove__content__part--bird">
-                        <svg width="48" height="56" class="archmove__icon--bird" data-icon-bird>
+                        <svg width="48" height="56" class="archmove__icon--bird">
                             <use xlink:href="sprite.svg#bird"></use>
                         </svg>
-                        <div class="archmove__content__part--text" data-archmove-text>
+                        <div class="archmove__content__part--text">
                             <h4>
                                 <b>100% guaranted project completion</b>
                             </h4>
@@ -120,10 +120,10 @@
                         </div>
                     </div>
                     <div class="archmove__content__part">
-                        <svg width="39" height="48" class="archmove__icon" data-icon-dollar>
+                        <svg width="39" height="48" class="archmove__icon">
                             <use xlink:href="sprite.svg#dollar"></use>
                         </svg>
-                        <div class="archmove__content__part--text" data-archmove-text>
+                        <div class="archmove__content__part--text">
                             <h4>
                                 <b>No additional fees</b>
                             </h4>
@@ -132,10 +132,10 @@
                         </div>
                     </div>
                     <div class="archmove__content__part">
-                        <svg width="40" height="53" class="archmove__icon" data-icon-circle="">
+                        <svg width="40" height="53" class="archmove__icon">
                             <use xlink:href="sprite.svg#circle"></use>
                         </svg>
-                        <div class="archmove__content__part--text" data-archmove-text>
+                        <div class="archmove__content__part--text">
                             <h4>
                                 <b>Get escort from the Team</b>
                             </h4>
@@ -143,11 +143,11 @@
                             <p>who check directly in the field</p>
                         </div>
                     </div>
-                    <button type="button" data-archmove-button class="archmove__content__button button">FREE CONSULTATION</button>
+                    <button type="button" class="button--primary archmove__button">FREE CONSULTATION</button>
                 </div>
             </div>
         </div>
-        <div class="bottom day" data-container>
+        <div class="bottom day">
             <div class="dream-project">
                 <div class="dream-project__photo">
                     <picture>
@@ -156,14 +156,14 @@
                     </picture>
                 </div>
                 <div class="dream-project__content">
-                    <div class="dream-project__content__text" data-dream-project-text>
+                    <div class="dream-project__content__text">
                         <p>
                             Realize your dream<br>
                             project with
                             <span class="word--color">Archmove</span>
                         </p>
                     </div>
-                    <button type="button" data-dream-project-button class="dream-project__content__button button">FREE CONSULTATION</button>
+                    <button type="button" class="button--primary">FREE CONSULTATION</button>
                 </div>
             </div>
             <div class="footer">
@@ -196,7 +196,7 @@
                         </li>
                     </ul>
                 </div>
-                <svg class="logo footer__logo" data-footer-logo>
+                <svg class="logo footer__logo">
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
             </div>
