changed classes name

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -33,8 +33,8 @@
                 </ul>
             </div>
             <div class="header__buttons">
-                <div class="header__buttons__toggle" data-toggle>
-                    <svg width="15" height="20" class="halfmoon" data-halfmoon>
+                <div class="theme-toggle" data-toggle>
+                    <svg width="15" height="20" class="theme-toggle__button--halfmoon" data-halfmoon>
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
                     <svg width="24" height="24">
@@ -147,8 +147,8 @@
                 </div>
             </div>
         </div>
-        <div class="bottom day">
-            <div class="dream-project">
+        <div class="dream-project">
+            <div class="dream-project__container">
                 <div class="dream-project__photo">
                     <picture>
                         <source srcset="2x/house.png 2x">
@@ -156,7 +156,7 @@
                     </picture>
                 </div>
                 <div class="dream-project__content">
-                    <div class="dream-project__content__text">
+                    <div class="dream-project__text">
                         <p>
                             Realize your dream<br>
                             project with
@@ -168,28 +168,28 @@
             </div>
             <div class="footer">
                 <div class="footer__menu">
-                    <ul class="footer__menu__list">
-                        <li class="footer__menu__lines">
+                    <ul class="footer__list">
+                        <li class="footer__lines">
                             <a href="#" class="menu__links">
                                 <b>About Us</b>
                             </a>
                         </li>
-                        <li class="footer__menu__lines">
+                        <li class="footer__lines">
                             <a href="#" class="menu__links">
                                 <b>How it Works</b>
                             </a>
                         </li>
-                        <li class="footer__menu__lines">
+                        <li class="footer__lines">
                             <a href="#" class="menu__links">
                                 <b>FAQ</b>
                             </a>
                         </li>
-                        <li class="footer__menu__lines">
+                        <li class="footer__lines">
                             <a href="#" class="menu__links">
                                 <b>Contact Us</b>
                             </a>
                         </li>
-                        <li class="footer__menu__lines">
+                        <li class="footer__lines">
                             <a href="#" class="menu__links">
                                 <b>Privacy Policy</b>
                             </a>
