update hover effect for logo

--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="header__left-container">
                 <a href="#" class="header__logo">
-                    <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28" fill="none">
+                    <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28">
                         <use href="./src/sprite.svg#logo"></use>
                     </svg>
                 </a>
