--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -12,6 +12,13 @@
         <title>Archmove</title>
     </head>
     <body>
+        <div class="preloader" data-preloader>
+            <div class="loader__spin"></div>
+            <svg class="loader__logo logo-size">
+                <use class="logo-size__pulse" xlink:href="#logo"></use>
+            </svg>
+        </div>
+
         <div class="wrapper">
             <header class="header">
                 <div class="header__nav">
