added animation for buuton, animation for logo on page load

--- a/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="header__left-container">
                 <a href="#" class="header__logo">
-                    <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28">
+                    <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28" data-logo>
                         <use href="./src/sprite.svg#logo"></use>
                     </svg>
                 </a>
@@ -131,6 +131,7 @@
                 </svg>
             </a>
         </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js" integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q==" crossorigin="anonymous"></script>
         <script src="app.js"></script>
     </body>
 </html>
