--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -34,7 +34,7 @@
             </div>
             <div class="header__buttons">
                 <div class="theme-toggle" data-toggle>
-                    <svg width="15" height="20" class="theme-toggle__button--halfmoon" data-halfmoon>
+                    <svg width="15" height="20" data-halfmoon>
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
                     <svg width="24" height="24">
