--- a/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
@@ -131,7 +131,10 @@
                 </svg>
             </a>
         </footer>
+        <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="scroll-up">
+            <use href="./src/sprite.svg#scroll-up"></use>
+        </svg>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js" integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q==" crossorigin="anonymous"></script>
-        <script src="app.js"></script>
+        <script src="app.js" type="module"></script>
     </body>
 </html>
