underline at link - 100%, button to Up - create

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -18,6 +18,7 @@
                 <use class="logo-size__pulse" xlink:href="#logo"></use>
             </svg>
         </div>
+        <a class="to-top" data-to-top>Up</a>
 
         <div class="wrapper">
             <header class="header">
