--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -65,17 +65,17 @@
                 <div class="main__build-room build-room">
                     <h3 class="build-room__name">Build professional valuable room for you</h3>
                     <div class="build-room__picture">
-                        <img class="build-room__img" src="img/room-01.jpg" alt="room 1">
-                        <img class="build-room__img" src="img/room-02.jpg" alt="room 2">
-                        <img class="build-room__img" src="img/room-03.jpg" alt="room 3">
-                        <img class="build-room__img" src="img/room-04.jpg" alt="room 4">
+                        <img class="build-room__img picture__img" src="img/room-01.jpg" alt="room 1">
+                        <img class="build-room__img picture__img" src="img/room-02.jpg" alt="room 2">
+                        <img class="build-room__img picture__img" src="img/room-03.jpg" alt="room 3">
+                        <img class="build-room__img picture__img" src="img/room-04.jpg" alt="room 4">
                     </div>
                 </div>
                 <div class="main__archmove archmove">
                     <h3 class="archmove__name">Build your needs with Archmove</h3>
                     <div class="archmove__info">
-                        <div class="archmove__picture">
-                            <img src="img/people.jpg" alt="archmove">
+                        <div class="archmove__picture picture">
+                            <img class="picture__img" src="img/people.jpg" alt="archmove">
                         </div>
                         <div class="main__archmove-consultation list">
                             <ul class="list">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="main__realize-dream realize-dream">
                     <div class="realize-dream__img">
-                        <img src="img/house_in_sky.png" alt="house in the sky">
+                        <img class="picture__img" src="img/house_in_sky.png" alt="house in the sky">
                     </div>
                     <div class="realize-dream__text">
                         <h3 class="realize-dream__name">
