--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -44,7 +44,7 @@
                     <div class="control">
                         <a href="#" class="control__sign-in">Sign in</a>
                     </div>
-                    <button class="control__btn" type="button">Sign Up</button>
+                    <button class="control__btn btn--animation" type="button">Sign Up</button>
                 </div>
             </header>
             <main class="main">
@@ -56,7 +56,7 @@
                         <p class="dream-house__text">
                             The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
                         </p>
-                        <button class="dream-house__btn" type="button">Free Consultation</button>
+                        <button class="dream-house__btn btn--animation" type="button">Free Consultation</button>
                     </div>
                     <div class="dream-house__picture picture">
                         <img class="picture__img" src="img/dream_house.jpg" alt="dream house">
@@ -113,7 +113,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <button class="free-consultation-btn" type="button">FREE CONSULTATION</button>
+                            <button class="free-consultation-btn btn--animation" type="button">FREE CONSULTATION</button>
                         </div>
                     </div>
                 </div>
