fixed classes names and mistakes in responsive

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -52,7 +52,7 @@
             </h1>
             <div class="dreamhouse__container">
                 <div class="dreamhouse__aside">
-                    <div class="dreamhouse__aside__text">
+                    <div class="dreamhouse__text">
                         <p class="p__line-height">The first and most trusted marketplace
                             <br>
                             of design & build house in the World.<br>
