--- a/homeworks/vladyslav.kovalov_kovalov/9-animations/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/9-animations/index.html
@@ -12,7 +12,7 @@
         <title>Archmove | Architech Marketplace?</title>
     </head>
     <body data-page-container data-theme="light">
-        <button data-scroll-up-button class="scroll-up-button" type="button">
+        <button data-scroll-up-button class="scroll-up-button hidden" type="button">
             <svg class="scroll-up-button__icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"></path>
             </svg>
