animate hero img

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/9-animations/index.html
@@ -74,6 +74,7 @@
                     <button class="button header__btn-sing-up" type="button">Sign Up</button>
                 </div>
             </div>
+            <div class="nav-to-top-btn" data-nav-to-top-bnt>&#8593;</div>
         </header>
         <div class="wrapper">
             <main class="main-content">
@@ -90,14 +91,14 @@
                             <button class="button call-to-action-btn" type="button">Free Consultation</button>
                         </div>
                         <img class="section-hero__teaser-picture" src="images/features.jpg"
-                            alt="Hose Interior">
+                            alt="Hose Interior" data-hero-picture>
                     </div>
                 </section>
                 <section class="section section-examples">
                     <h2 class="section-title section-examples__title">
                         Build professional<br> valuable room for you
                     </h2>
-                    <div class="section-examples__gallery gallery">
+                    <div class="section-examples__gallery gallery" data-gallery-container>
                         <img class="gallery__image" src="images/gall-1.jpg" alt="Examples photo">
                         <img class="gallery__image" src="images/gall-2.jpg" alt="Examples photo">
                         <img class="gallery__image" src="images/gall-3.jpg" alt="Examples photo">
