added logo animation

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -13,9 +13,11 @@
     </head>
     <body>
         <header class="header__content">
-            <svg class="logo">
-                <use xlink:href="sprite.svg#logo"></use>
-            </svg>
+            <div class="header__logo">
+                <svg class="logo">
+                    <use xlink:href="sprite.svg#logo"></use>
+                </svg>
+            </div>
             <div class="header__menu">
                 <ul class="menu__list">
                     <li class="menu__line">
