Add animation for images

--- a/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/9-animations/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>8-css-variables</title>
+        <title>9-animation</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
                     </p>
                     <button type="button" class="dream-house__button">Free Consultation</button>
                 </div>
-                <img src="src/dreamhouse.png" alt="dream house" class="dream-house__image">
+                <img src="src/dreamhouse.png" alt="dream house" class="dream-house__image" data-main-img>
             </div>
         </section>
         <section class="valuable-rooms">
@@ -55,10 +55,10 @@
                 Build professional <br> valuable room for you
             </p>
             <div class="valuable-rooms__list">
-                <img src="src/list1.png" alt="valuable room" class="valuable-rooms__img">
-                <img src="src/list2.png" alt="valuable room" class="valuable-rooms__img">
-                <img src="src/list3.png" alt="valuable room" class="valuable-rooms__img">
-                <img src="src/list4.png" alt="valuable room" class="valuable-rooms__img">
+                <img src="src/list1.png" alt="valuable room" class="valuable-rooms__img" data-image="2">
+                <img src="src/list2.png" alt="valuable room" class="valuable-rooms__img" data-image="3">
+                <img src="src/list3.png" alt="valuable room" class="valuable-rooms__img" data-image="4">
+                <img src="src/list4.png" alt="valuable room" class="valuable-rooms__img" data-image="5">
             </div>
         </section>
         <section class="needs">
@@ -67,7 +67,7 @@
                 with Archmove
             </p>
             <div class="needs__info">
-                <img src="src/needs-main.png" alt="needs image" class="needs__image">
+                <img src="src/needs-main.png" alt="needs image" class="needs__image" data-image="6">
                 <div class="needs__right-info">
                     <div class="needs__list">
                         <div class="needs__list__item">
@@ -106,7 +106,7 @@
         </section>
         <section class="realize-house">
             <div class="realize-house__container">
-                <img src="src/realize.png" alt="realize house" class="realize-house__image">
+                <img src="src/realize.png" alt="realize house" class="realize-house__image" data-image="7">
                 <div class="realize-house__info">
 
                     <p class="realize-house__title"> Realize your dream
